--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -667,6 +667,15 @@ config MSM_PERFORMANCE
 	  It ensures that no more than a user specified number of CPUs stay
 	  online at any given point in time.
 
+config MSM_CORE_CTL
+        select MSM_CORE_CTL_HELPER
+        tristate "Core control driver to dynamically hotplug CPUs"
+        help
+          Support for dynamicatlly hotplugging CPUs from kernel based on
+          current system load and state. It also supports limiting min and
+          max online CPUs from userspace.
+
+
 config MSM_PERFORMANCE_HOTPLUG_ON
 	bool "Hotplug functionality through msm_performance turned on"
 	depends on MSM_PERFORMANCE
