--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -572,6 +572,14 @@ config TI_DRV2667
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called ti_drv2667.
+
+config SOUND_CONTROL
+	tristate "wcd9335 volume boost"
+	depends on SND_SOC_WCD9335
+	default y
+	help
+	  If you say yes here you get sound control for wcd9335
+
 config FPC1020_REE
     tristate "FPC1020 fingerprint sensor support"
     help
