--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -63,7 +63,7 @@ obj-$(CONFIG_ECHO)		+= echo/
 obj-$(CONFIG_VEXPRESS_SYSCFG)	+= vexpress-syscfg.o
 obj-$(CONFIG_CXL_BASE)		+= cxl/
 obj-$(CONFIG_UID_CPUTIME) += uid_cputime.o
-obj-y				+= sound_control.o
+obj-$(CONFIG_SOUND_CONTROL)	+= sound_control.o
 obj-y				+= qcom/
 obj-$(CONFIG_TI_DRV2667) += ti_drv2667.o
 obj-$(CONFIG_FPC1020_REE) += fpc1020_ree.o
