--- a/arch/arm64/configs/z2_plus_perf_defconfig
+++ b/arch/arm64/configs/z2_plus_perf_defconfig
@@ -568,20 +568,20 @@ CONFIG_DEVFREQ_SPDM=y
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
 CONFIG_ARM_GIC_V3_ACL=y
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_EVENT=y
-CONFIG_CORESIGHT_FUSE=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
-CONFIG_CORESIGHT_TMC=y
-CONFIG_CORESIGHT_TPIU=y
-CONFIG_CORESIGHT_FUNNEL=y
-CONFIG_CORESIGHT_REPLICATOR=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_QPDI=y
+CONFIG_CORESIGHT=n
+CONFIG_CORESIGHT_EVENT=n
+CONFIG_CORESIGHT_FUSE=n
+CONFIG_CORESIGHT_CTI=n
+CONFIG_CORESIGHT_CTI_SAVE_DISABLE=n
+CONFIG_CORESIGHT_TMC=n
+CONFIG_CORESIGHT_TPIU=n
+CONFIG_CORESIGHT_FUNNEL=n
+CONFIG_CORESIGHT_REPLICATOR=n
+CONFIG_CORESIGHT_TPDA=n
+CONFIG_CORESIGHT_TPDM=n
+CONFIG_CORESIGHT_STM=n
+CONFIG_CORESIGHT_HWEVENT=n
+CONFIG_CORESIGHT_QPDI=n
 CONFIG_SENSORS_SSC=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_EXT2_FS=y
