--- a/arch/arm64/configs/z2_plus_perf_defconfig
+++ b/arch/arm64/configs/z2_plus_perf_defconfig
@@ -672,3 +672,6 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
+CONFIG_PGTABLE_MAPPING=y
+CONFIG_MMC_FFU=y
+CONFIG_MMI_STORAGE_INFO=y
