--- a/arch/arm64/configs/z2_plus_perf_defconfig
+++ b/arch/arm64/configs/z2_plus_perf_defconfig
@@ -663,3 +663,4 @@ CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_TRIPNDROID is not set
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_ZEN is not set
+CONFIG_CRYPTO_CRC32_ARM64=y
