--- a/arch/arm64/configs/z2_plus_perf_defconfig
+++ b/arch/arm64/configs/z2_plus_perf_defconfig
@@ -665,3 +665,8 @@ CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_ZEN is not set
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_CRYPTO_SHA256_ARM=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
