--- a/arch/arm64/configs/z2_plus_perf_defconfig
+++ b/arch/arm64/configs/z2_plus_perf_defconfig
@@ -671,3 +671,4 @@ CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
