--- a/arch/arm64/configs/z2_plus_perf_defconfig
+++ b/arch/arm64/configs/z2_plus_perf_defconfig
@@ -494,8 +494,6 @@ CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
 CONFIG_WLAN_FEATURE_MEMDUMP=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_QCA_WIFI_AUTOMOTIVE_CONC=y
-CONFIG_WLAN_UDP_RESPONSE_OFFLOAD=y
 CONFIG_WLAN_FEATURE_RX_WAKELOCK=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_BUS_SCALING=y
@@ -591,6 +589,7 @@ CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_SDCARD_FS=y
 CONFIG_FUSE_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
@@ -612,6 +611,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_IPC_LOGGING=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_DEBUG_RODATA=y
 CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_PFK=y
@@ -666,6 +666,7 @@ CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_ZEN is not set
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_CRYPTO_SHA256_ARM=y
+CONFIG_SDCARDFS=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
@@ -675,3 +676,6 @@ CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_PGTABLE_MAPPING=y
 CONFIG_MMC_FFU=y
 CONFIG_MMI_STORAGE_INFO=y
+CONFIG_SOUND_CONTROL=y
+CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
