--- a/arch/arm64/configs/cyanogenmod_z2_defconfig
+++ b/arch/arm64/configs/cyanogenmod_z2_defconfig
@@ -4448,3 +4448,6 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 CONFIG_MSM_CORE_CTL=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
